--- a/courses/pcmi/2010/teran/notes/notes.bib
+++ b/courses/pcmi/2010/teran/notes/notes.bib
@@ -1,45 +1,87 @@
-@article{TeranQuas05,
-author = {J. Teran and E. Sifakis and G. Irving and R. Fedkiw},
-title = {Robust quasistatic finite elements and flesh simulation},
-journal = {ACM SIGGRAPH/Eurographics Symposium on Computer Animation (SCA)},
-pages = {181-190},
-year = {2005}
+@inproceedings{Irving04,
+ author = {Irving, G. and Teran, J. and Fedkiw, R.},
+ title = {Invertible finite elements for robust simulation of large deformation},
+ booktitle = {Proceedings of the 2004 ACM SIGGRAPH/Eurographics symposium on Computer animation},
+ series = {SCA '04},
+ year = {2004},
+ isbn = {3-905673-14-2},
+ location = {Grenoble, France},
+ pages = {131--140},
+ numpages = {10},
+ url = {http://dx.doi.org/10.1145/1028523.1028541},
+ doi = {http://dx.doi.org/10.1145/1028523.1028541},
+ acmid = {1028541},
+ publisher = {Eurographics Association},
+ address = {Aire-la-Ville, Switzerland, Switzerland},
 }
+
+@inproceedings{Teran05a,
+ author = {Teran, Joseph and Sifakis, Eftychios and Irving, Geoffrey and Fedkiw, Ronald},
+ title = {Robust quasistatic finite elements and flesh simulation},
+ booktitle = {Proceedings of the 2005 ACM SIGGRAPH/Eurographics symposium on Computer animation},
+ series = {SCA '05},
+ year = {2005},
+ isbn = {1-59593-198-8},
+ location = {Los Angeles, California},
+ pages = {181--190},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1073368.1073394},
+ doi = {10.1145/1073368.1073394},
+ acmid = {1073394},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{Teran05b,
+ author = {Teran, Joseph and Sifakis, Eftychios and Blemker, Silvia S. and Ng-Thow-Hing, Victor and Lau, Cynthia and Fedkiw, Ronald},
+ title = {Creating and Simulating Skeletal Muscle from the Visible Human Data Set},
+ journal = {IEEE Transactions on Visualization and Computer Graphics},
+ issue_date = {May 2005},
+ volume = {11},
+ number = {3},
+ month = may,
+ year = {2005},
+ issn = {1077-2626},
+ pages = {317--328},
+ numpages = {12},
+ url = {http://dx.doi.org/10.1109/TVCG.2005.42},
+ doi = {10.1109/TVCG.2005.42},
+ acmid = {1053688},
+ publisher = {IEEE Educational Activities Department},
+ address = {Piscataway, NJ, USA},
+ keywords = {Index Terms- Finite volume methods, constructive solid geometry, physically-based modeling.},
+} 
 
 @article{Irving06,
-author = {Irving, G. and Teran, J. and Fedkiw, R.},
-title = {Tetrahedral and hexahedral invertible finite elements},
-journal = {Graph. Models},
-volume = {68},
-number = {2},
-year = {2006},
-issn = {1524-0703},
-pages = {66--89},
-doi = {http://dx.doi.org/10.1016/j.gmod.2005.03.007},
-publisher = {Academic Press Professional, Inc.},
-address = {San Diego, CA, USA}
+ author = {Irving, G. and Teran, J. and Fedkiw, R.},
+ title = {Tetrahedral and hexahedral invertible finite elements},
+ journal = {Graph. Models},
+ volume = {68},
+ issue = {2},
+ month = {March},
+ year = {2006},
+ issn = {1524-0703},
+ pages = {66--89},
+ numpages = {24},
+ url = {http://dl.acm.org/citation.cfm?id=1140961.1140963},
+ doi = {10.1016/j.gmod.2005.03.007},
+ acmid = {1140963},
+ publisher = {Academic Press Professional, Inc.},
+ address = {San Diego, CA, USA},
+ keywords = {finite elements, hexahedral elements, inversion, large deformation, plasticity, shells, stability, tetrahedral elements, volumetric solids},
 }
 
-@book{BW08,
-title = {Nonlinear continuum mechanics for finite element analysis},
-author = {J. Bonet and R.D. Wood},
-publisher = {Cambridge University Press},
-year = {1997}
-}
+@article{Bonet_Wood_2008, title={Nonlinear Continuum Mechanics for Finite Element Analysis}, volume={24}, url={http://ebooks.cambridge.org/ref/id/CBO9780511755446}, number={11}, journal={Communications in Numerical Methods in Engineering}, publisher={Cambridge University Press}, author={Bonet, Javier and Wood, Richard D}, year={2008}, pages={1567--1568}}
 
-@article{SHTOC09,
-author = {E. Sifakis and J. Hellrung and J. Teran and A. Oliker and C. Cutting},
-Doi = {},
-Issn = {0926-9630},
-Jid = {9214582},
-Journal = {Stud Health Technol Inform},
-Jt = {Studies in health technology and informatics},
-Language = {eng},
-Number = {},
-Pages = {313-8},
-Pmid = {19377176},
-Stat = {In-Data-Review},
-Title = {Local flaps: a real-time finite element based solution to the plastic surgery defect puzzle.},
-Volume = {142},
-Year = {2009}
+@Article{Sifakis09,
+AUTHOR = {Sifakis, Eftychios and Hellrung, Jeffrey and Teran, Joseph and Oliker, Aaron and Cutting, Court}
+TITLE = {Local flaps: a real-time finite element based solution to the plastic surgery defect puzzle.},
+JOURNAL = {Stud Health Technol Inform},
+VOLUME = {142},
+YEAR = {2009},
+NUMBER = {},
+PAGES = {313-8},
+URL = {http://www.biomedsearch.com/nih/Local-flaps-real-time-finite/19377176.html},
+PubMedID = {19377176},
+ISSN = {0926-9630},
 }
