--- a/courses/pcmi/2010/teran/notes/notes.tex
+++ b/courses/pcmi/2010/teran/notes/notes.tex
@@ -23,6 +23,31 @@
 % To properly number equations, edit and uncomment
 \numberwithin{equation}{chapter}
 
+\newcommand\bbR{\mathbb{R}}
+\newcommand\bfa{\mathbf{a}}
+\newcommand\bff{\mathbf{f}}
+\newcommand\bfg{\mathbf{g}}
+\newcommand\bfh{\mathbf{h}}
+\newcommand\bfu{\mathbf{u}}
+\newcommand\bfv{\mathbf{v}}
+\newcommand\bfw{\mathbf{w}}
+\newcommand\bfx{\mathbf{x}}
+\newcommand\bfB{\mathbf{B}}
+\newcommand\bfC{\mathbf{C}}
+\newcommand\bfD{\mathbf{D}}
+\newcommand\bfF{\mathbf{F}}
+\newcommand\bfG{\mathbf{G}}
+\newcommand\bfI{\mathbf{I}}
+\newcommand\bfN{\mathbf{N}}
+\newcommand\bfP{\mathbf{P}}
+\newcommand\bfS{\mathbf{S}}
+\newcommand\bfU{\mathbf{U}}
+\newcommand\bfV{\mathbf{V}}
+\newcommand\bfX{\mathbf{X}}
+\newcommand\bsepsilon{\boldsymbol{\epsilon}}
+\newcommand\bsphi{\boldsymbol{\phi}}
+\newcommand\bssigma{\boldsymbol{\sigma}}
+
 %\newcommand\pcms{\texttt{pcms-l.cls}}
 %\newcommand\amsbook{\texttt{amsbook.cls}}
 
